--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,9 @@
   height: 100vh;
   width: 100%;
   overflow: hidden;
-  background-color: black;
-  color: whitesmoke;
   position: relative;
+  background-color: black;
+  color:whitesmoke;
 }
 .sidebar h5{
   cursor: pointer;
@@ -69,6 +69,17 @@
 .album-detail{
   margin: 10px 0;
 }
+
+.profile-img{
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+}
+
 @media (max-width:768px) {
   .sidebar{
     position: fixed;
@@ -84,7 +95,9 @@
     height: calc(100vh - 100px); /* Adjust height to prevent cutoff */
     padding: 0px 20px;
     overflow-y: auto; /* Ensure scrolling is enabled */
+
   }
+  
   .open{
     transform: translateX(0);
   }
@@ -92,7 +105,7 @@
     display: block;
   }
   .player{
-    position: sticky;
+    position: fixed;
     bottom: 0;
     background-color: black;
     left: 0;
@@ -118,7 +131,7 @@
     gap: 5px;
   }
   .song-list{
-    height: calc(100vh - 200px); 
+    height: calc(100vh - 150px); 
   }
   .player img{
     width: 50px;
